overflow issues

--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ input::placeholder {
   display: grid;
   grid-template-columns: 1fr;
   width: 100%;
-  height: 100%;
+  height: auto;
+  overflow: auto;
 }
 
 .menu__item, .header__item {
